KM-IE-Bugs: fixed iphone formatting issue. decreased padding on open source and tech radar pages for better visibility on galaxy tablet.

--- a/src/components/explore/explorePage.scss
+++ b/src/components/explore/explorePage.scss
@@ -13,6 +13,10 @@
         font-size: 60%;
       }
     }
+
+    .col-2:last-child {
+      padding-top: 0px;
+    }
   }
 }
 
