--- a/src/style.scss
+++ b/src/style.scss
@@ -866,33 +866,16 @@ a {
   z-index: 1;
 }
 
-// @media(min-width: $phone-breakpoint) {
-//   .page {
-//     position: absolute;
-//     top: 0px;
-//     bottom: 0px;
-//     left: 0;
-//     right: 0;
-//     z-index: 1;
-//     padding: 77px 0px 80px 0px;
-//     overflow: hidden;
-//   }
-// }
-
-.page {
-  position: absolute;
-  top: 0px;
-  bottom: 0px;
-  left: 0;
-  right: 0;
-  z-index: 1;
-  padding: 107px 0px 80px 0px;
-  overflow: hidden;
-}
-
-@media(max-width: $tablet-nav-medium) {
+@media(min-width: $phone-breakpoint) {
   .page {
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    left: 0;
+    right: 0;
+    z-index: 1;
     padding: 77px 0px 80px 0px;
+    overflow: hidden;
   }
 }
 
@@ -900,6 +883,12 @@ a {
   .page {
     display: flex;
     align-items: center;
+  }
+}
+
+@media(min-width: $tablet-breakpoint) {
+  .page {
+    overflow: hidden;
   }
 }
 
